# ConstraintBasedSimulator

./: .gitmodules  README.md
.devcontainer/: Dockerfile
.github/: constants.env
.github/actions/setup_cache/: action.yml
.github/template/: README.md
.github/workflows/: auto-clang-format.yml  ci.yml  codeql-analysis.yml  generate-installer.yml  lint.yml  template-janitor.yml  tests.yml
code/: .clang-format  .clang-tidy  .flake8  .gitignore  .pylintrc  CMakeLists.txt  Dependencies.cmake  ProjectOptions.cmake  README.md  dev-requirements.txt  main.py  requirements.txt  sample.simulation  setup.py  simulator  tox.ini
code/.run/: main_app.run.xml
code/cmake/: Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Doxygen.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  Tests.cmake
code/configured_files/: config.hpp.in
code/constraint_based_simulator/: main.py  setup.py
code/constraint_based_simulator/common/: MainLogger.py  Singleton.py
code/constraint_based_simulator/events_manager/: EventsHandler.py  EventsHandlersLoader.py  EventsManager.py  GraphingSignals.py  InitializationSignals.py  Signal.py  SimpleSignal.py
code/constraint_based_simulator/grapher/: GenerateDrawables.py  GrapherEventsHandler.py
code/constraint_based_simulator/grapher/drawables/: BarDrawable.py  CircleDrawable.py  Drawable.py  DrawableScene.py  PointDrawable.py
code/constraint_based_simulator/input_reader/: Constraint.py  GraphicalElements.py  InputReaderEventsHandler.py  Parser.py  Point.py  ReadInput.py  SemanticsCheck.py  SimulationFile.py  grammar.lark
code/constraint_based_simulator/input_reader/ast/: AstTransformer.py  Bar.py  Circle.py  ConstantConstraint.py  Constraint.py  ConstraintOperator.py  ConstraintProperty.py  ConstraintType.py  Coordinate.py  FunctionConstraint.py  GraphicalElement.py  Identifier.py  Point.py  Statement.py  Statements.py  StaticQualifier.py
code/constraint_based_simulator/simulator/: EventsHandler.py  IndexedElement.py  IndexerIterator.py  NamedParticle.py  Particle.py  ParticlesHolder.py  PositionApproximation.py  Simulation.py  SimulationData.py  SimulationFunctions.py  SimulationHolder.py  SimulatorEventsHandler.py
code/constraint_based_simulator/simulator/constraints/: CircleConstraint.py  Constraint.py  DistanceConstraint.py
code/constraint_based_simulator/simulator/constraints/functions/: CircleConstraintFunctions.py  (+1 more)
code/constraint_based_simulator/ui/: GrapherWidget.py  MainApp.py  MainWindow.py  SimulationSpeeds.py  Speeds.py  Strings.py  UiEventsHandler.py
code/fuzz_test/: CMakeLists.txt
code/include/ConstraintBasedSimulator/: sample_library.hpp
code/include/main_app/: GeneralConstants.hpp  input_file.hpp  simulation.hpp
code/include/main_app/events_manager/: EventManager.hpp  EventsInitializer.hpp  Signal.hpp
code/include/main_app/grapher/: DrawableSimulation.hpp  EventLatch.hpp  EventManager.hpp  Grapher.hpp  Signal.hpp
code/include/main_app/input_reader/: Constraint.hpp  ConstraintProperty.hpp  ConstraintType.hpp  Coordinate.hpp  GraphicalElement.hpp  LexyComponents.hpp  Parser.hpp  Point.hpp  PointId.hpp  ReadInput.hpp  SemanticsCheck.hpp
code/include/main_app/inputreader/: ReadInput.hpp
code/include/main_app/simulator/: Constraint.hpp  EigenHelper.hpp  EventLatch.hpp  Particle.hpp  ParticleId.hpp  SimulationState.hpp  Simulator.hpp  StateLoader.hpp  Vector2d.hpp
code/include/main_app/ui/: GrapherWidget.hpp  MainWindow.hpp  SimulationSpeed.hpp  SimulationTimer.hpp  UiRunner.hpp
code/include/main_app/util/: VariadicOverload.hpp
code/src/: CMakeLists.txt
code/src/ftxui_sample/: CMakeLists.txt  main.cpp
code/src/main_app/: CMakeLists.txt  input_file.cpp  main.cpp  simulation.cpp
code/src/main_app/events_manager/: CMakeLists.txt  EventsInitializer.cpp
code/src/main_app/grapher/: CMakeLists.txt  EventLatch.cpp  Grapher.cpp
code/src/main_app/input_reader/: CMakeLists.txt  Constraint.cpp  ConstraintType.cpp  Parser.cpp  Point.cpp  ReadInput.cpp  SemanticsCheck.cpp
code/src/main_app/inputreader/: ReadInput.cpp
code/src/main_app/simulator/: CMakeLists.txt  Constraint.cpp  EventLatch.cpp  Particle.cpp  Simulator.cpp  StateLoader.cpp
code/src/main_app/ui/: CMakeLists.txt  GrapherWidget.cpp  MainWindow.cpp  SimulationTimer.cpp  UiRunner.cpp
code/src/sample_library/: CMakeLists.txt  sample_library.cpp
code/test/: CMakeLists.txt  constexpr_tests.cpp  tests.cpp
code/test/input_reader/: CMakeLists.txt  tests.cpp
code/test/libraries/: CMakeLists.txt  eigen.cpp  lexy.cpp  qt.cpp
code/test/simulator/: CMakeLists.txt
code/test/ui/: CMakeLists.txt
code/tests/common/: TestSingleton.py
code/tests/events_manager/: TestSignal.py  TestSimpleSignal.py  tests.py
code/tests/grapher/: TestGenerateDrawables.py
code/tests/input_reader/: TestSemanticsCheck.py
code/tests/simulator/: Cases.py  TestSimulation.py
code/ui/: MainApp.py  MainWindow.py
design/diagrams/: input reader class diagram.drawio  sample-diagram.drawio  ui class diagram.drawio
design/diagrams/class/: event manager class diagram.drawio  grapher class diagram.drawio  input reader class diagram.drawio  simulation properties class diagram.drawio  simulator class diagram.drawio  ui class diagram.drawio
design/diagrams/component/: high level components.drawio
design/diagrams/sequence/: graph sequence.drawio  graphing sequence.drawio  initialization sequence.drawio
design/diagrams/user flow/: user flow main.drawio
design/drawings/: .$main window wireframe.drawio.bkp  basic initial.sketch  main window wireframe.drawio
docker/: clang.Dockerfile  gcc.Dockerfile
examples/: circle and bar.simulation  example0.simulation  example2.simulation  example3.simulation  gigantic circle constraints.simulation  simple circle.simulation  two circles.simulation  two points.simulation
requirements/: requierements.md  simulation file description.md  test.md
specification/: simulation file specification.txt
